
   MulticastHandler class
      1) Filename renamed from McHandler to MulticastHandler to match classname

   TcpServerMultiple class
      1) Renamed class TcpServerMulti to TcpServerMultiple

--------------------------------------------------------------------------------
basicGL

   Translator class
      1) Fixed copy constructor -- now properly copies all attributes

--------------------------------------------------------------------------------
dis


--------------------------------------------------------------------------------
gui-glut

--------------------------------------------------------------------------------
maps

# general cleanup of classes and code (removal of tabs, docs, etc)

   CadrgMap class
      1) fixed a bug in findBestZone() method

--------------------------------------------------------------------------------
otw


--------------------------------------------------------------------------------
recorder


--------------------------------------------------------------------------------
simulation

   AutoPilot class
      1) added several new slots that define default pilot flight actions or 
         characteristics, such as the maximum rate of turn, bank angle, max
         climb, etc.  These are pilot characteristics in defining how a plane
         is flown -- not physical performance characteristics associated with
         the vehicle itself.

   AngleOnlyTrackManager class
      1) initialized a few previously uninitialized variables -- the initialization
         didn't matter, but we like to adhere to coding stds.

   DynamicsModels class
      1) set commanded heading, velocity, and altitude now take additional
         parameters to define change rates.

   Simulation class
      1) updateData() -- corrected the delta time being passed to updateBgPlayerList()
         when more than one background thread is being used (bug fix)

   Station class
      1) added slots to set the stack size of the default time critical,